# practical-omnitigs

./: .gitignore  Cargo.toml  README.md  Singularity  Snakefile  Snakefile.old  TROUBLESHOOTING.md  environment.yaml  environment.yml  report_file_parser.py  verify.sh
.github/: test.yml
bigraph/: Cargo.toml  README.md
bigraph/src/: index.rs  lib.rs
bigraph/src/bigraph/: bigraph_wrapper.rs  mod.rs  petgraph_impl.rs
bigraph/src/implementation/: bigraph_wrapper.rs  mod.rs  node_bigraph_wrapper.rs  petgraph_impl.rs
bigraph/src/interface/: dynamic_bigraph.rs  mod.rs  static_bigraph.rs
cli/: Cargo.toml
cli/src/: main.rs
compact-genome/: Cargo.toml  README.md
compact-genome/src/: genome.rs  lib.rs  vector_genome_impl.rs
config/: conda-bandage-env.yml  conda-bbmap-env.yml  conda-bcalm2-env.yaml  conda-bcalm2-env.yml  conda-biopython-env.yml  conda-canu-env.yml  conda-concorde-env.yml  conda-contigvalidator-env.yml  conda-convert-reads-env.yml  conda-download-env.yml  conda-extract-env.yaml  conda-extract-env.yml  conda-flye-env.yml  conda-hifiasm-env.yml  conda-imagemagick-env.yml  conda-install-env.yml  conda-install-flye-env.yml  conda-install-hifiasm-env.yml  conda-install-hisim-env.yml  conda-install-lja-env.yml  conda-install-mdbg-env.yml  conda-install-ratatosk-env.yml  conda-latex-env.yml  conda-latex-gen-env.yml  conda-mdbg-env.yml  conda-perl-env.yml  conda-quast-env.yml  conda-rsync-env.yml  conda-rust-env.yml  conda-samtools-env.yml  conda-seaborn-env.yml  conda-selftest-env.yml  conda-seqtk-env.yml  conda-simlord-env.yml  conda-simulate-perfect-reads-env.yml  conda-time-env.yml  conda-wtdbg2-env.yml  conda-wtdbg2-node-errors-env.yml  decorator.yaml  default.yaml  (+3 more)
genome-graph/: Cargo.toml  README.md
genome-graph/src/: error.rs  lib.rs
genome-graph/src/io/: bcalm2.rs  mod.rs  util.rs
implementation/: .gitignore  Cargo.toml  LICENSE.txt  README.md  tarpaulin.toml
implementation/bigraph/: Cargo.toml
implementation/bigraph/src/: lib.rs
implementation/bigraph/src/algo/: eulerian.rs  mod.rs  walk_cover.rs
implementation/bigraph/src/implementation/: mod.rs  node_bigraph_wrapper.rs
implementation/bigraph/src/interface/: dynamic_bigraph.rs  mod.rs  static_bigraph.rs
implementation/cli/: Cargo.toml  README.md
implementation/cli/src/: circularise_records.rs  filter.rs  hamcircuit.rs  main.rs  omnitigs.rs  trivial_omnitigs.rs  unitigs.rs  verify.rs  verify_genome.rs
implementation/compact-genome/: Cargo.toml  README.md
implementation/compact-genome/src/: interface.rs  lib.rs  vector_genome_impl.rs
implementation/compact-genome/src/implementation/: ascii_vec_sequence.rs  ascii_vec_sequence_store.rs  bit_vec_sequence.rs  bit_vec_sequence_store.rs  mod.rs  slice.rs  slice_sequence.rs  two_bit_vec_sequence.rs  two_bit_vec_sequence_store.rs  vec.rs  vec_sequence.rs  vec_sequence_store.rs  vector_genome_impl.rs
implementation/compact-genome/src/interface/: mod.rs  sequence.rs  sequence_store.rs
implementation/compact-genome/src/interface/alphabet/: dna_alphabet.rs  dna_alphabet_or_n.rs  mod.rs
implementation/compact-genome/src/interface/sequence/: mod.rs  neighbor_iterators.rs
implementation/genome-graph/: Cargo.toml  README.md
implementation/genome-graph/src/: error.rs  lib.rs  types.rs
implementation/genome-graph/src/io/: bcalm2.rs  fasta.rs  mod.rs  wtdbg2.rs
implementation/genome-graph/src/io/gfa/: mod.rs
implementation/genome-graph/src/io/wtdbg2/: dot.rs  mod.rs
implementation/omnitigs/: Cargo.toml  README.md
implementation/omnitigs/src/: hamiltonian.rs  lib.rs  node_covering_node_visible_one_circular_safe.rs  restricted_reachability.rs  walks.rs
implementation/omnitigs/src/hamiltonian/: mod.rs
implementation/omnitigs/src/hydrostructure/: incremental_hydrostructure.rs  mod.rs  static_hydrostructure.rs  subgraph_is_path_tracker.rs
implementation/omnitigs/src/hydrostructure/incremental_hydrostructure/: conjunctive_safety_tracker.rs  mod.rs  node_centric_component_tracker.rs  vapor_is_path_tracker.rs
implementation/omnitigs/src/macrotigs/: mod.rs
implementation/omnitigs/src/macrotigs/macronodes/: mod.rs  strongly_connected_macronode_algorithm.rs
implementation/omnitigs/src/macrotigs/macrotigs/: default_macrotig_link_algorithm.rs  mod.rs
implementation/omnitigs/src/macrotigs/microtigs/: mod.rs  strongly_connected_hydrostructure_based_maximal_microtig_algorithm.rs
implementation/omnitigs/src/omnitigs/: default_node_centric_trivial_omnitigs.rs  default_trivial_omnitigs.rs  incremental_hydrostructure_macrotig_based_non_trivial_omnitigs.rs  mod.rs  univocal_extension_algorithms.rs
implementation/omnitigs/src/unitigs/: mod.rs  uncompacted_unitigs.rs
implementation/src/: circularise_records.rs  compare_tigs.rs  filter.rs  hamcircuit.rs  main.rs  multi_safe_walks.rs  omnitigs.rs  trivial_omnitigs.rs  unitigs.rs  util.rs  verify.rs  verify_genome.rs
implementation/traitgraph/: Cargo.toml  README.md
implementation/traitgraph/benches/: benches.rs
implementation/traitgraph/src/: index.rs  io.rs  lib.rs  walks.rs
implementation/traitgraph/src/algo/: components.rs  dijkstra.rs  eulerian.rs  mod.rs  predefined_graphs.rs  queue.rs  traversal.rs  unitigs.rs
implementation/traitgraph/src/algo/dijkstra/: dijkstra_weight_implementations.rs  mod.rs
implementation/traitgraph/src/algo/traversal/: mod.rs  univocal_traversal.rs
implementation/traitgraph/src/implementation/: bit_vector_subgraph.rs  incremental_subgraph.rs  mod.rs  petgraph_impl.rs
implementation/traitgraph/src/interface/: mod.rs  subgraph.rs
implementation/traitgraph/src/io/: hamcircuit.rs  mod.rs
implementation/traitsequence/: Cargo.toml  README.md
implementation/traitsequence-derive/: Cargo.toml
implementation/traitsequence-derive/src/: lib.rs
implementation/traitsequence/src/: interface.rs  lib.rs
implementation/traitsequence/src/implementation/: mod.rs  slice.rs  vec.rs
results/: 2021-01-25.wtdbg2-match-comparison.C.elegans.txt
scripts/: cancel_slurm_jobs.py  collect_failed_rules.sh  compute_genome_reference_length.py  run_on_dx1.sh  (+26 more)
(+5 files in other folders)
