[package]
name = "bigraph"
description = "Different representations with implemented operations on bigraphs"
categories = ["data-structures", "mathematics", "science"]
keywords = ["bigraph", "graph", "bidirected", "abstract", "implementation"]
version = "0.1.0-alpha.1"
authors = ["Sebastian Schmidt <sebastian.schmidt@helsinki.fi>"]
edition = "2018"
homepage = "https://github.com/algbio/practical-omnitigs/tree/master/bigraph"
documentation = "https://docs.rs/bigraph"
repository = "https://github.com/algbio/practical-omnitigs"
readme = "README.md"
license = "BSD-2-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opaque_typedef = "0.0.5"
opaque_typedef_macros = "0.0.5"
petgraph = "0.5"
num-traits = "0.2"
