[package]
name = "compact-genome"
description = "Representation of genomes"
version = "0.1.0"
authors = ["Sebastian Schmidt <sebastian.schmidt@helsinki.fi>"]
edition = "2018"
homepage = "https://github.com/algbio/practical-omnitigs/tree/master/compact-genome"
documentation = "https://docs.rs/compact-genome"
repository = "https://github.com/algbio/practical-omnitigs"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
