[package]
name = "cli"
version = "0.4.0"
authors = ["Sebastian Schmidt <sebastian.schmidt@helsinki.fi>"]
edition = "2021"
readme = "README.md"
license = "BSD-2-Clause"
rust-version = "1.58.1"

# NEVER SET TO TRUE!
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
compact-genome = "2.1.0"
genome-graph = "8.0.0"
omnitigs = { version = "5.0.1" }
traitsequence = "2.0.0"
error-chain = "0.12.4"
log = "0.4.14"
simplelog = "0.12.1"
colored = "2.0.0"
bio = "1.3.1"
statistical = "1.0.0"
scan_fmt = "0.2.6"
rand = "0.8.4"
traitgraph-algo = "8.1.0"
traitgraph-tsplib-io = "5.0.0"
anyhow = "1.0.53"
suffix = "1.3.0"
