[package]
name = "cli"
version = "0.3.2-alpha.0"
authors = ["Sebastian Schmidt <sebastian.schmidt@helsinki.fi>"]
edition = "2018"
readme = "README.md"
license = "BSD-2-Clause"

# NEVER SET TO TRUE!
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.1"
compact-genome = {path = "../compact-genome"}
genome-graph = {path = "../genome-graph"}
omnitigs = {path = "../omnitigs"}
traitsequence = {path = "../traitsequence"}
error-chain = "0.12"
log = "0.4"
simplelog = "0.8"
colored = "2"
bio = "0.31"
statistical = "1"
scan_fmt = "0.2"
rand = "0.7"
