[package]
name = "compact-genome"
description = "Representation of genomes"
categories = ["data-structures", "science"]
keywords = ["genome", "representation", "compact", "string", "bioinformatics"]
version = "0.4.1"
authors = ["Sebastian Schmidt <sebastian.schmidt@helsinki.fi>"]
edition = "2018"
homepage = "https://github.com/algbio/practical-omnitigs/tree/master/implementation/compact-genome"
documentation = "https://docs.rs/compact-genome"
repository = "https://github.com/algbio/practical-omnitigs"
readme = "README.md"
license = "BSD-2-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
traitsequence = {path = "../traitsequence", version = "^0.4.0"}
itertools = "0.9"
bitvec = "0.22"
ref-cast = "1"
