[package]
name = "compact-genome"
description = "Representation of genomes"
categories = ["data-structures", "science"]
keywords = ["genome", "representation", "compact", "string", "bioinformatics"]
version = "0.6.0"
authors = ["Sebastian Schmidt <sebastian.schmidt@helsinki.fi>"]
edition = "2021"
homepage = "https://github.com/algbio/practical-omnitigs/tree/master/implementation/compact-genome"
documentation = "https://docs.rs/compact-genome"
repository = "https://github.com/algbio/practical-omnitigs"
readme = "README.md"
license = "BSD-2-Clause"
rust-version = "1.58.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
traitsequence = "0.6.0"
itertools = "0.10.3"
bitvec = "0.22.3"
ref-cast = "1.0.6"
lazy_static = "1.4.0"
