[package]
name = "genome-graph"
description = "Representation of genome graphs"
version = "0.7.0"
authors = ["Sebastian Schmidt <sebastian.schmidt@helsinki.fi>"]
edition = "2021"
categories = ["data-structures", "science"]
keywords = ["genome", "representation", "graph", "bioinformatics"]
homepage = "https://github.com/algbio/practical-omnitigs/tree/master/implementation/genome-graph"
documentation = "https://docs.rs/genome-graph"
repository = "https://github.com/algbio/practical-omnitigs"
readme = "README.md"
license = "BSD-2-Clause"
rust-version = "1.58.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bigraph = "0.7.0"
compact-genome = "0.7.0"
traitgraph-algo = "0.7.0"
num-traits = "0.2.14"
bio = "0.39.1"
error-chain = "0.12.4"
log = "0.4.14"
regex = "1.5.4"
anyhow = "1.0.53"
