[package]
name = "omnitigs"
description = "Omnitig-related algorithms"
categories = ["mathematics", "algorithms", "science"]
keywords = ["genome", "representation", "compact", "string", "bioinformatics"]
version = "0.1.0-alpha.1"
authors = ["Sebastian Schmidt <sebastian.schmidt@helsinki.fi>"]
edition = "2018"
homepage = "https://github.com/algbio/practical-omnitigs/tree/master/implementation/compact-genome"
documentation = "https://docs.rs/compact-genome"
repository = "https://github.com/algbio/practical-omnitigs"
readme = "README.md"
license = "BSD-2-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
traitgraph = {path = "../traitgraph", version = "0.1.0"}
bigraph = {path = "../bigraph", version = "0.1.0"}
traitsequence = {path = "../traitsequence", version = "0.1.0-alpha.0"}
bitvector = "0.1"
rand = "0.7"
log = "0.4"