[package]
name = "omnitigs"
description = "Omnitig-related algorithms"
categories = ["mathematics", "algorithms", "science"]
keywords = ["genome", "assembly", "omnitigs", "bioinformatics"]
version = "0.6.0"
authors = ["Sebastian Schmidt <sebastian.schmidt@helsinki.fi>"]
edition = "2018"
homepage = "https://github.com/algbio/practical-omnitigs/tree/master/implementation/compact-genome"
documentation = "https://docs.rs/compact-genome"
repository = "https://github.com/algbio/practical-omnitigs"
readme = "README.md"
license = "BSD-2-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
traitgraph = "0.6.1"
traitgraph-algo = "0.6.2"
bigraph = {path = "../bigraph", version = "0.6.0"}
traitsequence = "0.6.0"
bitvector = "0.1.5"
rand = "0.8.4"
log = "0.4.14"
