[package]
name = "traitgraph"
description = "Different representations with implemented operations on graphs"
categories = ["data-structures", "mathematics", "science"]
keywords = ["graph", "trait", "abstract", "implementation", "algorithm"]
version = "0.5.1"
authors = ["Sebastian Schmidt <sebastian.schmidt@helsinki.fi>"]
edition = "2018"
homepage = "https://github.com/algbio/practical-omnitigs/tree/master/implementation/traitgraph"
documentation = "https://docs.rs/traitgraph"
repository = "https://github.com/algbio/practical-omnitigs"
readme = "README.md"
license = "BSD-2-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petgraph = "0.5"
num-traits = "0.2"
bitvector = "0.1"
traitsequence = {path = "../traitsequence", version = "^0.4.0"}
rand = "0.7"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benches"
harness = false
