[package]
name = "traitsequence-derive"
description = "Derive macros for the traitsequence crate."
categories = ["data-structures"]
keywords = ["sequence", "trait", "abstract", "strong typedef", "derive"]
version = "0.1.0-alpha.0"
authors = ["Sebastian Schmidt <sebastian.schmidt@helsinki.fi>"]
edition = "2018"
homepage = "https://github.com/algbio/practical-omnitigs/tree/master/implementation/traitsequence-derive"
documentation = "https://docs.rs/traitsequence-derive"
repository = "https://github.com/algbio/practical-omnitigs"
readme = "README.md"
license = "BSD-2-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc_macro_roids = "0.7"
syn = "1"

[lib]
proc-macro = true