[package]
name = "traitsequence"
description = "Traits to abstract over sequences."
categories = ["data-structures"]
keywords = ["sequence", "trait", "abstract", "strong-typedef"]
version = "0.4.2"
authors = ["Sebastian Schmidt <sebastian.schmidt@helsinki.fi>"]
edition = "2018"
homepage = "https://github.com/algbio/practical-omnitigs/tree/master/implementation/traitsequence"
documentation = "https://docs.rs/traitsequence"
repository = "https://github.com/algbio/practical-omnitigs"
readme = "README.md"
license = "BSD-2-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
